# IPCam

./: settings.gradle
CV/: CMakeLists.txt
CV/src/: motion.cpp  recognize.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ma/ipcam/: CameraHandler.java  MainActivity.java  SimpleHttpServer.java
app/src/main/res/values/: strings.xml
